# foucl

./: README.md  cabal.project  foucl.cabal
scripts/: foucl-proj  install.sh
scripts/daemon/: foucld  foucld-start  foucld-stop  foucld-usage  install.sh  sharadd-start
src/: ChecklistCrud.hs  NoteCrud.hs
test/unit-tests/: UnitTests.hs
