cabal-version: 2.4

name:           foucl
version:        0.1.0.0
description:
homepage:
bug-reports:
author:
maintainer:
copyright:
build-type:     Simple
-- extra-source-files:

source-repository head
  type: git
  location: https://github.com/amaille91/foucl

library
  exposed-modules:
      Lib
      , Model
      , CrudStorage
      , Crud
      , NoteCrud
      , ChecklistCrud
  other-modules:
      Paths_foucl
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , happstack-server
    , bytestring
    , aeson
    , uuid
    , binary
    , directory
    , transformers
    , transformers-either
    , mtl
    , base64-bytestring
    , SHA
  default-language: Haskell2010

executable foucl
  main-is: Main.hs
  other-modules:
      Paths_foucl
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , foucl
  default-language: Haskell2010

test-suite foucl-unit-tests
  type: exitcode-stdio-1.0
  main-is: UnitTestsExec.hs
  other-modules:
        Paths_foucl
      , UnitTests
  hs-source-dirs:
      test/unit-tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , foucl
    , HUnit ==1.6.0.0
    , directory
    , transformers
  default-language: Haskell2010

test-suite foucl-integration-tests
  type: exitcode-stdio-1.0
  main-is: IntegrationTestsExec.hs
  other-modules:
      Paths_foucl
    , IntegrationTests
  hs-source-dirs:
    test/integration-tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , foucl
    , hspec
    , HUnit
    , http-conduit
    , aeson
    , bytestring
    , utf8-string
  default-language: Haskell2010
